hotfix - conditionally add social icons based on _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ image_alt: A minimalistic jekyll theme for academic    # image description
 author: John Doe 
 profile_image: /assets/img/avatar/cropped.png #/assets/img/avatar/avatar.jpeg 
 occupation: 
-snippet: 
+snippet:
 twitter: tbutler0x90
 github: tcbutler320
 linkedin: tyler-b-a700a1aa
-stackoverflow: 12935605
+stackoverflow: '12935605'
 website: https://tbutler.org
-codepen: tcbutler320
-medium: tbutler0x90
+codepen: 
+medium: 
 email: developer.tbutler@gmail.com
 keybase: tbutler320
 pgp: 
